--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
             "Org_Heigl\\JUnitDiff\\" : "src/"
         }
     },
-    "bin" : ["bin/junitdiff"]
+    "bin" : ["app/junitdiff"],
+    "require-dev": {
+        "phpunit/phpunit": "^5.4"
+    }
 }
