Enables Travis CI

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
     "bin" : ["app/junitdiff"],
     "require-dev": {
         "phpunit/phpunit": "^5.4"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
