--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "bin" : ["app/junitdiff"],
     "require-dev": {
-        "phpunit/phpunit": "^5.4"
+        "phpunit/phpunit": "^4.8||^5.4"
     },
     "scripts": {
         "test": "phpunit"
