--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php" : "^5.5||^7.0",
-        "symfony/console": "^3.1"
+        "symfony/console": "^3.1",
+        "org_heigl/trait-iterator": "^1.0"
     },
     "license": "MIT",
     "authors": [
