--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "bin" : ["app/junitdiff"],
     "require-dev": {
-        "phpunit/phpunit": "^4.8||^5.4"
+        "phpunit/phpunit": "^4.8||^5.4",
+        "mockery/mockery": "^0.9.5"
     },
     "scripts": {
         "test": "phpunit"
