--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ php:
 matrix:
   fast_finish: true
 
+addons:
+    code_climate:
+        repo_token: $CODECLIMATE_TOKEN
+
 before_script:
   - if [ $TRAVIS_PHP_VERSION != "hhvm" ]; then phpenv config-rm xdebug.ini ; fi
   - composer self-update
