--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
         repo_token: $CODECLIMATE_TOKEN
 
 before_script:
-  - if [ $TRAVIS_PHP_VERSION != "hhvm" ]; then phpenv config-rm xdebug.ini ; fi
+#  - if [ $TRAVIS_PHP_VERSION != "hhvm" ]; then phpenv config-rm xdebug.ini ; fi
   - composer self-update
   - composer install -n
 
