--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ matrix:
     - php: 7.0
       env:
         - TEST_COVERAGE=true
+        - CREATE_PHAR=true
+    - php: 7.1
     - php: 5.6
-    - php: 5.5
 
 addons:
     code_climate:
