--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,14 @@
         "mockery/mockery": "^0.9.5"
     },
     "scripts": {
-        "test": "phpunit --coverage-text --coverage-clover clover.xml"
+        "test": "phpunit --coverage-text --coverage-clover clover.xml",
+        "buildphar" : [
+            "rm -rf vendor",
+            "composer install --no-dev --prefer-dist",
+            "curl -o phar-composer -L `curl -s https://api.github.com/repos/clue/phar-composer/releases | grep browser_download_url | head -n 1 | cut -d '\"' -f 4`",
+            "chmod 755 phar-composer",
+            "chmod 755 phar-composer",
+            "./phar-composer build . build"
+        ]
     }
 }
