--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
             "curl -o phar-composer -L `curl -s https://api.github.com/repos/clue/phar-composer/releases | grep browser_download_url | head -n 1 | cut -d '\"' -f 4`",
             "chmod 755 phar-composer",
             "chmod 755 phar-composer",
-            "./phar-composer build . build"
+            "mkdir ./build",
+            "./phar-composer build . build/"
         ]
     }
 }
