--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,29 @@
     "bin" : ["app/junitdiff"],
     "require-dev": {
         "phpunit/phpunit": "^4.8||^5.4",
-        "mockery/mockery": "^0.9.5 || ^1.0.0"
+        "mockery/mockery": "^0.9.5 || ^1.0.0",
+        "tm/tooly-composer-script": "^1.3"
     },
     "scripts": {
-        "test": "phpunit --color --coverage-text --coverage-clover clover.xml --log-junit junitlogs/`git rev-parse HEAD`.log",
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-clover clover.xml",
+        "cs-check": "./vendor/bin/phpcs.phar --version && ./vendor/bin/phpcs.phar",
+        "test-junitdiff": "phpunit --color --coverage-text --coverage-clover clover.xml --log-junit junitlogs/`git rev-parse HEAD`.log",
+        "post-install-cmd": "Tooly\\ScriptHandler::installPharTools",
+        "post-update-cmd": "Tooly\\ScriptHandler::installPharTools",
         "buildphar" : [
             "rm -rf vendor",
             "composer install --no-dev --prefer-dist",
-            "curl -o createPhar -L `curl -s https://api.github.com/repos/MacFJA/PharBuilder/releases | grep browser_download_url | head -n 1 | cut -d '\"' -f 4`",
+            "curl -o createPhar -L https://api.getlatestassets.com/github/MacFJA/PharBuilder/pharbuilder.phar",
+            "curl -o createPhar.asc -L https://api.getlatestassets.com/github/MacFJA/PharBuilder/pharbuilder.phar.asc",
             "chmod 755 createPhar",
             "mkdir -p ./build",
             "php -d phar.readonly=0 ./createPhar package composer.json"
+        ],
+        "upload-coverage": [
+            "curl -o coveralls -L api.getlatestassets.com/github/php-coveralls/php-coveralls/php-coveralls.phar",
+            "chmod 755 coveralls",
+            "./coveralls -v"
         ]
     },
     "extra": {
@@ -52,6 +64,12 @@
                 "src"
             ],
             "skip-shebang" : false
+        },
+        "tools": {
+            "phpcs": {
+                "url": "https://api.getlatestassets.com/github/squizlabs/PHP_CodeSniffer/phpcs.phar",
+                "sign-url": "https://api.getlatestassets.com/github/squizlabs/PHP_CodeSniffer/phpcs.phar.asc"
+            }
         }
     }
 }
